Implemented splash screen

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,11 @@
 <resources>
 
     <style name="Theme.RangersCards" parent="Theme.AppCompat.Light.NoActionBar" />
+    <style name="Theme.RangersCards.Splash" parent="Theme.SplashScreen">
+        <!-- Set the splash screen background color -->
+        <item name="windowSplashScreenBackground">@color/ic_launcher_background</item>
+        <!-- Set the splash screen icon drawable -->
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+        <item name="postSplashScreenTheme">@style/Theme.RangersCards</item>
+    </style>
 </resources>
